--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+@layer utilities {
+    .text-outline-white {
+        -webkit-text-stroke: 4px white;
+    }
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
